--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa_ex?useSSL=false
-spring.datasource.username=jpa_user
-spring.datasource.password=jpa_user
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/jpa_ex?useSSL=false
+#spring.datasource.username=jpa_user
+#spring.datasource.password=jpa_user
+#
+##update - 변경 반영, create 기존 테이블 삭제 후 다시 생성
+#spring.jpa.hibernate.ddl-auto=update
+#
+##실행되는 SQL을 보여줄 것인지
+#spring.jpa.generate-ddl=false
+#
+#spring.jpa.database=mysql
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
-#update - 변경 반영, create 기존 테이블 삭제 후 다시 생성
-spring.jpa.hibernate.ddl-auto=update
 
-#실행되는 SQL을 보여줄 것인지
-spring.jpa.generate-ddl=false
-
-spring.jpa.database=mysql
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.datasource.url=jdbc:h2:/Users/junhwan/Desktop/h2;MODE=Oracle;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=jangjh
+spring.datasource.password=111111
+spring.datasource.driver-class-name=org.h2.Driver
+spring.h2.console.enabled=true
+#http://localhost:8080/h2-console로 console 접근 가능
