--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.password=111111
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 #http://localhost:8080/h2-console로 console 접근 가능
+
+#dialect에 의해 해당 데이터베이스를 찾고 그거에 의해 SQL문이 생성된다.
